--- a/Assignment8Group2MVVM/Assignment6Group2MVVM.csproj
+++ b/Assignment8Group2MVVM/Assignment6Group2MVVM.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="carRepair.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
